# BluePyParallel

./: .auto-changelog  .codespellrc  .copier-answers.yml  .coveragerc  .gitignore  .gitlab-ci.yml  .gitreview  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE.txt  README.md  README.rst  package.json  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  how_to_use.yaml
.github/workflows/: run-tox.yml
bluepyparallel/: __init__.py  database.py  evaluator.py  parallel.py  utils.py  version.py
doc/source/: api.rst  conf.py
docs/source/: api_ref.rst  conf.py  index.rst
examples/: large_computation.py  run_large_dask.sh  run_large_ipyp.sh
tests/: __init__.py  conftest.py  test_database.py  test_evaluator.py  test_parallel.py
