[project]
name = "BluePyParallel"
authors = [
    { name="Blue Brain Project, EPFL" }
]
description = "Provides an embarrassingly parallel tool with sql backend."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache License 2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
dependencies = [
    "pandas>=1.3",
    "ipyparallel>=6.3",
    "dask[dataframe, distributed]>=2021.11",
    "dask-mpi>=2021.11",
    "distributed>=2021.11",
    "packaging>=20",
    "sqlalchemy>=1.4.24",
    "sqlalchemy<2; python_version<'3.8'",
    "sqlalchemy-utils>=0.37.2",
    "tqdm>=3.7",
]

[project.optional-dependencies]
docs = [
    "docutils<0.21",  # Temporary fix for m2r2
    "m2r2",
    "sphinx",
    "sphinx-bluebrain-theme",
]
test = [
    "mpi4py>=3.0.1",
    "packaging>=20",
    "pytest>=6.1",
    "pytest-benchmark>=3.4",
    "pytest-cov>=4.1",
    "pytest-html>=3.2",
]

[project.urls]
Homepage = "https://BluePyParallel.readthedocs.io"
Repository = "https://github.com/BlueBrain/BluePyParallel"
Tracker = "https://github.com/BlueBrain/BluePyParallel/issues"

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["bluepyparallel*"]

[tool.black]
line-length = 100
target-version = [
    "py39",
    "py310",
    "py311",
    "py312",
]

[tool.pydocstyle]
# ignore the following:
#   - D107: Missing docstring in __init__
add-ignore = [
    "D107",
]
convention = "google"

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
